@@ -1,5 +1,8 @@
 package com.my_company.service.email;
 
+import com.my_company.cache.ParameterCache;
+import com.my_company.constants.enums.ParameterCode;
+import com.my_company.constants.enums.Status;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.mail.SimpleMailMessage;
@@ -21,19 +24,24 @@ public class EmailService {
     public void sendPasswordResetMail(String to, String token) {
         String resetLink = frontendBaseUrl + "/resetPassword?token=" + token;
         String subject = "🔐 Parola Sıfırlama Talebi";
+
+        Integer tokenExpirationMinutes = Status.ACTIVE.equals(ParameterCache.getParamValueAsStatus(ParameterCode.TOKEN_EXPIRATION_CONTROL)) ?
+                ParameterCache.getParamValueAsInteger(ParameterCode.TOKEN_EXPIRATION_MINUTES)
+                : null;
+
         String body = """
                 Merhaba,
                 
                 Parolanızı sıfırlamak için aşağıdaki bağlantıya tıklayın:
                 %s
                 
-                Bu bağlantı 15 dakika içinde geçersiz olacaktır.
+                %s
                 
                 Eğer bu isteği siz yapmadıysanız, bu e-postayı yok sayabilirsiniz.
                 
                 Saygılarımızla,
                 MyCompany Destek Ekibi
-                """.formatted(resetLink);
+                """.formatted(resetLink, (tokenExpirationMinutes == null ? "" : String.format("Bu bağlantı %d dakika içinde geçersiz olacaktır.", tokenExpirationMinutes)));
 
         sendEmail(to, subject, body);
     }
